--- a/pages/matematica/0-matematica.html
+++ b/pages/matematica/0-matematica.html
@@ -82,8 +82,8 @@ title: Matemática
     <div class="card">
         <a href="MatemáticaI-vet.html">
             <div class="card-body">
-                <h5 class="card-title">Matemática I* <br>  (nan)</h5>
-                <img src="{{ site.baseurl }}/assets/icons/matematica/MatemáticaI.png" alt="MatemáticaI.png" width="150">
+                <h5 class="card-title">Matemática I* <br>  (05-N0177)</h5>
+                <img src="{{ site.baseurl }}/assets/icons/matematica/MatematicaI-vet.png" alt="Matemática-vet.png" width="150">
             </div>
         </a>
     </div>
