--- a/pages/matematica/MatemáticaI-vet.html
+++ b/pages/matematica/MatemáticaI-vet.html
@@ -6,19 +6,20 @@ title: Matemática I*
 <h2>Matemática I*</h2>
 
 <div class="card-container">
-    <div class="card">
-        <a href="#">
-            <div class="card-body">
-                <h5 class="card-title">En construcción</h5>
-                <img src="{{ site.baseurl }}/assets/icons/construccion.png" alt="En construcción"  width="150">
-            </div>
-        </a>
+    <div class="item" data-link="0-Cronograma/Cronograma.pdf?raw=true">
+        Cronograma de clases
+    </div>
+    <div class="item" data-link="2-Resumenes">
+        Resúmenes de clase
+    </div>
+    <div class="item" data-link="2-Ejercicios">
+        ejercicios
     </div>
 </div>
 
 <p style="margin-top: 20px; font-size: 16px;">
     Si detectas algún error en este material, por favor repórtalo
-    <a href="#">
+    <a href="https://github.com/ECFM-PUCE/Matematica-I-05-N0177/issues">
         aquí
     </a>.
 </p>
@@ -36,7 +37,7 @@ title: Matemática I*
 <script>
     // Repositorio de GitHub (usuario/nombre-del-repositorio)
     const repoOwner = "ECFM-PUCE";
-    const repoName = "";
+    const repoName = "Matematica-I-05-N0177";
 </script>
 
 <script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
