implementa calculadora distribución normal

--- a/pages/asistentes/calc-prob.html
+++ b/pages/asistentes/calc-prob.html
@@ -8,7 +8,7 @@ title: Calculador de probabilidad
 <div class="container-material" id="material-container">
     <a href="calc-prob/binomial.html">
         <div class="item">
-            Distribución binomial
+            Distribución Binomial
         </div>
     </a>
     <a href="calc-prob/poisson.html">
@@ -18,7 +18,12 @@ title: Calculador de probabilidad
     </a>
     <a href="calc-prob/exponencial.html">
         <div class="item">
-            Distribución exponencial
+            Distribución Exponencial
+        </div>
+    </a>
+    <a href="calc-prob/normal.html">
+        <div class="item">
+            Distribución Normal
         </div>
     </a>
 </div>
