arregla nombre de calculadora

--- a/pages/asistentes/0-asistentes.html
+++ b/pages/asistentes/0-asistentes.html
@@ -26,8 +26,8 @@ title: Asistentes Computacionales
     <div class="card">
         <a href="calc-prob.html">
             <div class="card-body">
-                <h5 class="card-title">Calculador de probabilidad</h5>
-                <img src="{{ site.baseurl }}/assets/icons/calc-prob.png" alt="Calculador de probabilidad" height="120">
+                <h5 class="card-title">Calculadora de probabilidades</h5>
+                <img src="{{ site.baseurl }}/assets/icons/calc-prob.png" alt="Calculador de probabilidad" height="110">
             </div>
         </a>
     </div>
