--- a/pages/asistentes/calc-prob.html
+++ b/pages/asistentes/calc-prob.html
@@ -3,7 +3,7 @@ layout: page
 title: Calculador de probabilidad
 ---
 
-<h2>Calculador de probabilidad</h2>
+<h2>Calculadora de probabilidades</h2>
 
 <div class="container-material" id="material-container">
     <a href="calc-prob/binomial.html">
