agrega notebook Python tablas de verdad

--- a/pages/asistentes/0-asistentes.html
+++ b/pages/asistentes/0-asistentes.html
@@ -15,7 +15,7 @@ title: Asistentes Computacionales
         </a>
     </div>
     <div class="card">
-        <a href="#">
+        <a href="NotebooksPython.html">
             <div class="card-body">
                 <h5 class="card-title">Notebooks Educativos de Python</h5>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg"
