--- a/pages/asistentes/NotebooksPython.html
+++ b/pages/asistentes/NotebooksPython.html
@@ -1,24 +1,20 @@
 ---
 layout: page
-title: Física I 
+title: Notebooks Educativos de Python
 ---
 
-<h2>Física I </h2>
+<h2>Notebooks Educativos de Python</h2>
 
-<div class="card-container">
-    <div class="card">
-        <a href="#">
-            <div class="card-body">
-                <h5 class="card-title">En construcción</h5>
-                <img src="{{ site.baseurl }}/assets/icons/construccion.png" alt="En construcción"  width="150">
-            </div>
-        </a>
+<div class="container-material">
+    <div class="item-colab" data-link="Tablas-de-verdad.ipynb">
+        <p>Tablas de verdad</p>
+            <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab" />
     </div>
 </div>
 
 <p style="margin-top: 20px; font-size: 16px;">
     Si detectas algún error en este material, por favor repórtalo
-    <a href="#">
+    <a href="https://github.com/ECFM-PUCE/R-Notebooks-Educativos/issues">
         aquí
     </a>.
 </p>
@@ -36,7 +32,7 @@ title: Física I
 <script>
     // Repositorio de GitHub (usuario/nombre-del-repositorio)
     const repoOwner = "ECFM-PUCE";
-    const repoName = "";
+    const repoName = "Python-Notebooks-Educativos";
 </script>
 
 <script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
