--- a/pages/estadistica/EstadisticaIV .html
+++ b/pages/estadistica/EstadisticaIV .html
@@ -39,5 +39,5 @@ title: Estadistica IV 
     const repoName = "";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
     
