--- a/pages/estadistica/EstadísticaII(CD).html
+++ b/pages/estadistica/EstadísticaII(CD).html
@@ -39,5 +39,5 @@ title: Estadística II (CD)
     const repoName = "";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
     
