--- a/pages/estadistica/EstadísticaII.html
+++ b/pages/estadistica/EstadísticaII.html
@@ -39,5 +39,5 @@ title: Estadística II
     const repoName = "";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
     
