--- a/pages/estadistica/EstadísticaparaC.delaSalud.html
+++ b/pages/estadistica/EstadísticaparaC.delaSalud.html
@@ -39,5 +39,5 @@ title: Estadística para C.de la Salud
     const repoName = "";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
     
