--- a/pages/fisica/CBS1-FísicaTeo-Prác.html
+++ b/pages/fisica/CBS1-FísicaTeo-Prác.html
@@ -39,5 +39,5 @@ title: CBS1-Física Teo-Prác
     const repoName = "";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
     
