--- a/pages/fisica/FísicaIII.html
+++ b/pages/fisica/FísicaIII.html
@@ -39,4 +39,4 @@ title: Física III
     const repoName = "";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
