agrega representación de funciones en asistentes

--- a/pages/asistentes/NotebooksPython.html
+++ b/pages/asistentes/NotebooksPython.html
@@ -12,6 +12,20 @@ title: Notebooks Educativos de Python
     </div>
 </div>
 
+<div class="container-material">
+    <div class="item-colab" data-link="Representacion-funciones-calculadora.ipynb">
+        <p>Representación de funciones (calculadora)</p>
+            <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab" />
+    </div>
+</div>
+
+<div class="container-material">
+    <div class="item-colab" data-link="Representacion-funciones-codigo.ipynb">
+        <p>Representación de funciones (código)</p>
+            <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab" />
+    </div>
+</div>
+
 <p style="margin-top: 20px; font-size: 16px;">
     Si detectas algún error en este material, por favor repórtalo
     <a href="https://github.com/ECFM-PUCE/R-Notebooks-Educativos/issues">
